# StarQE

./: LICENSE  README.md  setup.cfg  setup.py
data/anzograph/: loadData.sparql
data/formulas/1hop-2i/0qual/: test.sparql  train.sparql  validation.sparql
data/formulas/1hop-2i/1qual-per-triple/: test.sparql  train.sparql  validation.sparql
data/formulas/1hop/0qual/: test.sparql  train.sparql  validation.sparql
data/formulas/1hop/1qual/: train.sparql  validation.sparql
data/formulas/1hop/1qual-per-triple/: test.sparql
data/formulas/2hop/0qual/: test.sparql  train.sparql  validation.sparql
data/formulas/2hop/1qual/: first-test.sparql  first-train.sparql  first-validation.sparql  second-test.sparql  second-train.sparql  second-validation.sparql
data/formulas/2hop/1qual-per-triple/: test.sparql  train.sparql  validation.sparql
data/formulas/2i-1hop/0qual/: test.sparql  train.sparql  validation.sparql
data/formulas/2i-1hop/1qual-per-triple/: test.sparql  train.sparql  validation.sparql
data/formulas/2i/0qual/: test.sparql  train.sparql  validation.sparql
data/formulas/2i/1qual-per-triple/: test.sparql  train.sparql  validation.sparql
data/formulas/3hop/0qual/: test.sparql  train.sparql  validation.sparql
data/formulas/3hop/1qual-per-triple/: test.sparql  train.sparql  validation.sparql
data/mappings/: entoid  reltoid
executables/: main.py
src/mphrqe/: __init__.py  cli.py  early_stopping.py  evaluation.py  hpo.py  loss.py  models.py  moves.py  oracle_metrics.py  similarity.py  tracking.py  training.py  typing.py  utils.py
src/mphrqe/data/: README.md  __init__.py  config.py  converter.py  loadTriples.py  loader.py  mapping.py  query.proto  query_executor.py
src/mphrqe/layer/: __init__.py  aggregation.py  composition.py  gnn.py  pooling.py  util.py  weighting.py
tests/: test_aggregation.py  test_cli_dataset_spec.py  test_composition.py  test_data.py  test_early_stopping.py  test_evaluation.py  test_layers.py  test_loss.py  test_oracle_metrics.py  test_pooling.py  test_query_embedding.py  test_query_validity_checker.py  test_reification.py  test_similarity.py  test_sparql_stripped_conversion.py  test_weighting.py
(+6 files in other folders)
